src/test/resources/tests/typeError/mixedTypesInGenericVararg.qg

init {
    var = arrayList(true, true, 1)
}

run true

input(a,b) true

